--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 
 members = [
-    "basic-control-flow",
-    "basic-data-structure-types",
+    "c01-the-basics",
+    "c02-basic-control-flow",
 ]
